main/bin/main.103858.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl" -Xclang -O3 -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=201 -Xclang -ivfsoverlay-lib/root/intelFPGA_pro/20.1/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device"
Setting target instruction set architecture to: Default (Intel(R) Advanced Vector Extensions 2 (Intel(R) AVX2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.2 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:28:17: error: use of undeclared identifier 'NUM_PLACE_TYPES'
        int PlaceLinks[NUM_PLACE_TYPES]; //// indexed by i) place type. Value is the number of that place type (e.g. school no. 17; office no. 310 etc.) Place[i][person->PlaceLinks[i]], can be up to P.Nplace[i]
                       ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:32:2: error: unknown type name 'InfStat'
        InfStat inf;
        ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:33:15: error: bit-fields are not supported in OpenCL
        unsigned int esocdist_comply : 1;
                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:34:15: error: bit-fields are not supported in OpenCL
        unsigned int keyworker : 1;                             // also used to binary index cumI_keyworker[] and related arrays
                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:35:15: error: bit-fields are not supported in OpenCL
        unsigned int to_die : 1;
                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:36:15: error: bit-fields are not supported in OpenCL
        unsigned int detected : 1; //added hospitalisation flag: ggilani 28/10/2014, added flag to determined whether this person's infection is detected or not
                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:42:37: error: use of undeclared identifier 'NUM_PLACE_TYPES'
        unsigned short int PlaceGroupLinks[NUM_PLACE_TYPES];    // These can definitely get > 255
                                           ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:52:15: error: bit-fields are not supported in OpenCL
        unsigned int digitalContactTraced : 1;
                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:53:15: error: bit-fields are not supported in OpenCL
        unsigned int index_case_dct : 2;
                     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:54:15: error: bit-fields are not supported in OpenCL
        unsigned int digitalContactTracingUser : 1;
                     ^
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
